--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -37,7 +37,7 @@
 			    <h5></h5>
 			</div>
 		</div>
-		<div class="col s12 m5">
+		<div class="col s12 m5 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
 			<img src="./images/phone1.png">
 		</div>
 		<i class="ion-chatboxes icono-fondo"></i>
@@ -62,7 +62,7 @@
 			    <h5></h5>
 			</div>
 		</div>
-		<div ng-show="pushiar" class="col s12 m5">
+		<div ng-show="pushiar" class="col s12 m5 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
 			<img src="./images/phone2.png">
 		</div>
 		<i class="ion-ios-people icono-fondo"></i>
@@ -83,7 +83,7 @@
 			    <h5></h5>
 			</div>
 		</div>
-		<div class="col s12 m5">
+		<div class="col s12 m5 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
 			<img src="./images/phone3.png">
 		</div>
 		<i class="ion-map icono-fondo"></i>
