--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -5,7 +5,7 @@
 @import url(https://fonts.googleapis.com/css?family=Signika:400,700,300);
 
 html 
-	background-color negro2
+	background-color #0d0b0d
 	overflow-x hidden
 	//font-family 'Roboto', sans-serif
 	font-family 'Signika', sans-serif
