--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -12,7 +12,7 @@
 }
 @import url("https://fonts.googleapis.com/css?family=Signika:400,700,300");
 html {
-  background-color: #151515;
+  background-color: #0d0b0d;
   overflow-x: hidden;
   font-family: 'Signika', sans-serif;
   font-weight: 400;
