--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -15,8 +15,6 @@
 	position absolute
 	bottom 0px
 	
-
-	
 .trio img 
 	width 100%
 	
@@ -54,8 +52,6 @@
 .st1
 	overflow hidden
 	display block
-	position relative
-	background principal
 	margin 0
 		
 	& img 
@@ -74,38 +70,16 @@
 		
 	& h5
 		font-weight 300
-		
-	& .icono-fondo
-		position absolute
-		font-size 900px
-		left -30px
-		margin-top -380px
 		
 	& .divider
 		width 390px
 		height 2px
-		background-color darken(principal,20%)
-		border-bottom 1px solid lighten(principal,10%)
-		
-.tri2 
-	width 100%
-	position absolute
-	bottom -1px
-	left 1px
-	z-index 15
-	
-.tri3
-	width 100%
-	position absolute
-	bottom -1px
-	left 1px
-	z-index 15
+		background-color darken(negro,20%)
+		border-bottom 1px solid lighten(negro,10%)
 		
 .st2
 	overflow hidden
 	display block
-	background rosa
-	position relative
 	margin 0
 		
 	& img 
@@ -125,23 +99,16 @@
 	& h5
 		font-weight 300
 		
-	& .icono-fondo
-		position absolute
-		font-size 900px
-		right -50px
-		margin-top -390px
 		
 	& .divider
 		width 520px
 		height 2px
-		background-color darken(rosa,20%)
-		border-bottom 1px solid lighten(rosa,10%)
+		background-color darken(negro,20%)
+		border-bottom 1px solid lighten(negro,10%)
 		
 .st3
 	overflow hidden
 	display block
-	background violeta
-	position relative
 	margin 0
 		
 	& img 
@@ -170,17 +137,24 @@
 	& .divider
 		width 430px
 		height 2px
-		background-color darken(violeta,20%)
-		border-bottom 1px solid lighten(violeta,10%)
+		background-color darken(negro,20%)
+		border-bottom 1px solid lighten(negro,10%)
 		
 .circulos
 	bordesCirculares(50%)
-	background-color amarillo
+	background-color principal
 	width 80px
 	height 80px
 	boxShadow(-10px 10px 15px alpha(negro,60%))
 	text-align center
 	line-height 80px
 	font-size 30px
+	
+.socials a 
+	margin-top 20px
+	margin-right 5px
+	
+.socials a:hover 
+	background-color alpha(principal,50%)
 	
 /* FIN INICIO 
