--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -24,7 +24,7 @@
 	</div>
 </div>
 
-<div class="row st1">
+<div class="row st1" ng-cloak>
 	<div class="container">
 		<div class="col s12 m7 wow fadeInLeft" data-wow-duration="1s">
 			<div class="texto">
@@ -44,7 +44,7 @@
 </div>
 
 
-<div class="row st2">
+<div class="row st2" ng-cloak>
 	<div class="container">
 		<div ng-show="!pushiar" class="col s12 m7 wow fadeInLeft" data-wow-duration="1s">
 			<img src="./images/phone2.png">
