--- a/app/styles/ap-inicio.styl
+++ b/app/styles/ap-inicio.styl
@@ -1,5 +1,27 @@
- INICIO */
+ /* INICIO */
 
+.contenedorPropa
+	position absolute
+	//background-color red
+	max-width 500px
+	font-size 40px
+	color blanco
+	top 200px
+	left 15%
+	font-weight 300
+	
+	& span 
+		font-size 60px
+		
+	& i 
+		font-size 60px
+		
+	& a 
+		margin-top 25px
+		
+	& a:hover 
+		background-color alpha(principal,80%)
+		
 .triangulo1
 	width 100%
 	height 0
@@ -48,97 +70,62 @@
 	
 	& img 
 		padding 0 5px
+		
+.promosContenedor
+	padding-top 70px
+	
+.promo
+	padding 0 10px
+	color blanco
 
+	& i 
+		font-size 110px
+		color alpha(principal,90%)
+		margin-bottom 30px
+		
+	& span 
+		font-size 30px
+		display block
+		font-weight 300
+		
+	& p 
+		font-size 20px
+		font-weight 200
+		
 .st1
-	overflow hidden
-	display block
-	margin 0
-		
+	padding 120px 0	
+	
 	& img 
-		display block
-		z-index 10
-		position relative
+		margin-top 30px
 	
 	& .texto 
 		color blanco
-		margin-top 250px
-		z-index 10
-		position relative
+		margin-top 30px
+		margin-bottom 50px
 
 	& h2 
 		font-weight bold
 		
 	& h5
-		font-weight 300
+		font-weight 200
+		
+	& p 
+		font-size 25px
 		
 	& .divider
-		width 390px
+		width 300px
 		height 2px
 		background-color darken(negro,20%)
 		border-bottom 1px solid lighten(negro,10%)
 		
-.st2
-	overflow hidden
-	display block
-	margin 0
-		
-	& img 
-		display block
-		z-index 10
-		position relative
+.serv 
+	padding 100px 0 80px
 	
-	& .texto 
-		color blanco
-		margin-top 250px
-		z-index 10
-		position relative
-
-	& h2 
-		font-weight bold
+	& .section h5
+		font-size 50px
 		
-	& h5
-		font-weight 300
-		
-		
-	& .divider
-		width 520px
-		height 2px
-		background-color darken(negro,20%)
-		border-bottom 1px solid lighten(negro,10%)
-		
-.st3
-	overflow hidden
-	display block
-	margin 0
-		
-	& img 
-		display block
-		z-index 10
-		position relative
-	
-	& .texto 
-		color blanco
-		margin-top 250px
-		z-index 10
-		position relative
-
-	& h2 
-		font-weight bold
-		
-	& h5
-		font-weight 300
-		
-	& .icono-fondo
-		position absolute
-		font-size 900px
-		left -30px
-		margin-top -300px
-		
-	& .divider
-		width 430px
-		height 2px
-		background-color darken(negro,20%)
-		border-bottom 1px solid lighten(negro,10%)
+	& .section p 
+		font-size 25px
 		
 .circulos
 	bordesCirculares(50%)
@@ -156,5 +143,15 @@
 	
 .socials a:hover 
 	background-color alpha(principal,50%)
+	
+.cerrar-video 
+	right 10px
+	bottom 10px
+	
+.cerrar-video i 
+	font-size 40px
+	
+.bgvideo
+	width 100%
 	
 /* FIN INICIO 
